excluded classes from pitest coverage, refactor classes and unit tests according to pitest